# temp-check

./: CMakeLists.txt
include/: temp_check_interface.hpp
src/: main.cpp  temp-check-client.cpp
src/temp-check-client/: main.cpp
src/temp-check-interface/: temp_check_interface.hpp
src/temp-check-service/: main.cpp  temp-check.service
